# Mechanistic-Interpretability-for-Learning-Assurance-of-a-Vision-Based-Landing-System

./: .envrc  .gitattributes  .gitignore  Makefile  Manifest.toml  Project.toml  README.md  pyproject.toml
figs/: aggregated.json  fig_atoms_curated.typ  fig_cv_hist.typ  fig_ims_auroc.typ  fig_ims_content.typ  fig_ims_sweep.typ  tab_content_style.typ  tab_regression.typ
libs/KSVD.jl/src/: set_num_threads.jl
scripts/: aggregate.py  atoms.py  dry_stub_ksvd.py  eval.py  extract_attn_pooled.py  extract_patch_embeddings.py  ims_sweep.py  run_sweep.sh  train.py  visualize_atoms.py
scripts/julia/: ksvd_lard.jl  sparse_code_patches.jl
src/: __init__.py  constants.py  cue.py  data.py  evaluate.py  losses.py  model.py
